Update build doc for memory settings (#2203)